--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "type": "git",
     "url": "git+ssh://git@github.com/nicholasjativa/Amadeus_Server.git"
   },
+  "dependencies": {
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2"
+  },
   "author": "Nicholas Daniel Jativa",
   "license": "ISC",
   "bugs": {
