--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.2",
+    "grant-express": "^3.7.2",
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
@@ -24,5 +26,8 @@
   "bugs": {
     "url": "https://github.com/nicholasjativa/Amadeus_Server/issues"
   },
-  "homepage": "https://github.com/nicholasjativa/Amadeus_Server#readme"
+  "homepage": "https://github.com/nicholasjativa/Amadeus_Server#readme",
+  "devDependencies": {
+    "twilio": "^2.11.1"
+  }
 }
