Sending messages to Slack works now.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "git+ssh://git@github.com/nicholasjativa/Amadeus_Server.git"
   },
   "dependencies": {
+    "@slack/client": "^3.9.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
